# ot-demo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  package.json
backends/haskell/: .ghci  OTDemo.hs  ot-demo.cabal  stack.yaml
backends/node/: server.js
public/: bower.json  client.js  codemirror-client.css  component.json  index.html  ot-min.js  ot.js  styles.css
public/bower_components/codemirror/: .bower.json
public/bower_components/engine.io-client/: .bower.json
public/bower_components/socket.io-client/: .bower.json
public/components/codemirror/: component.json
public/demo/: client.js  index.html
public/visualization/: index.html  visualization.css  visualization.js
