name:                ot-demo
version:             0.0.1.0
-- synopsis:            
-- description:         
homepage:            https://github.com/Operational-Transformation
license:             MIT
license-file:        ../../LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable ot-demo
  main-is:             OTDemo.hs
  -- other-modules:       
  build-depends:       base == 4.5.*,
                       ot == 0.1.2,
                       yesod >= 1.1 && < 1.2,
                       yesod-static >= 1.1 && < 1.2,
                       warp >= 1.3 && < 1.5,
                       concurrent-extra >= 0.7,
                       text
  ghc-options:         -threaded -O2