name:                ot-demo
version:             0.0.1.0
-- synopsis:            
-- description:         
homepage:            https://github.com/Operational-Transformation
license:             MIT
license-file:        ../../LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable ot-demo
  main-is:             OTDemo.hs
  -- other-modules:       
  build-depends:       base >= 4.6 && < 5,
                       ot >= 0.2.0.0,
                       yesod-core >= 1.4.5 && < 1.5,
                       yesod-static >= 1.4 && < 1.5,
                       concurrent-extra >= 0.7,
                       engine-io >= 1.2.3 && < 1.3,
                       engine-io-yesod >= 1.0.1 && < 1.1,
                       socket-io >= 1.3.0 && < 1.4,
                       text,
                       aeson >= 0.7 && < 0.9,
                       containers,
                       http-types,
                       mtl,
                       transformers,
                       stm,
                       bytestring,
                       monad-logger
  ghc-options:         -threaded -O2 -Wall